--- a/VideoPlayer/VideoPlayer.qss
+++ b/VideoPlayer/VideoPlayer.qss
@@ -31,9 +31,15 @@ QPushButton
 {
     color: white;
     border: 1px solid white;
-    border-radius: 5px;
+    border-radius: 15px;
     padding: 7px;
     font-size: 18px;
+}
+
+QPushButton:hover
+{
+    background-color: rgba(35, 35, 35, 255);
+    border-radius: 15px;
 }
 
 /*
@@ -43,7 +49,7 @@ QLineEdit
 {
     font-size: 18px;
     border: 1px solid white;
-    border-radius: 5px;
+    border-radius: 15px;
     color: white;
     padding: 7px;
 }
