--- a/VideoPlayer/loginpage.ui
+++ b/VideoPlayer/loginpage.ui
@@ -109,7 +109,7 @@
     </spacer>
    </item>
    <item>
-    <widget class="QPushButton" name="pushButton">
+    <widget class="QPushButton" name="button_Login">
      <property name="maximumSize">
       <size>
        <width>16777215</width>
