--- a/VideoPlayer/homepage.ui
+++ b/VideoPlayer/homepage.ui
@@ -61,10 +61,17 @@ border: none;</string>
         <x>0</x>
         <y>0</y>
         <width>390</width>
-        <height>425</height>
+        <height>397</height>
        </rect>
       </property>
      </widget>
+    </widget>
+   </item>
+   <item>
+    <widget class="QPushButton" name="pushButton">
+     <property name="text">
+      <string>Upload Video</string>
+     </property>
     </widget>
    </item>
   </layout>
