--- a/VideoPlayer/homepage.ui
+++ b/VideoPlayer/homepage.ui
@@ -36,7 +36,7 @@
 border: none;</string>
         </property>
         <property name="text">
-         <string>Profile</string>
+         <string/>
         </property>
        </widget>
       </item>
