Initial profile page

--- a/VideoPlayer/VideoPlayer.qrc
+++ b/VideoPlayer/VideoPlayer.qrc
@@ -2,5 +2,6 @@
     <qresource prefix="/">
         <file>assets/VideoPlayer.qss</file>
         <file>assets/button_images/profile_image.png</file>
+        <file>assets/button_images/leftArrow.jpg</file>
     </qresource>
 </RCC>
