Link Register Page
Links the register page to the stacked widget and temporarily creates a register button in the login until a decision has been made on a welcome screen.

--- a/VideoPlayer/loginpage.ui
+++ b/VideoPlayer/loginpage.ui
@@ -185,6 +185,13 @@
         </property>
        </widget>
       </item>
+      <item>
+       <widget class="QPushButton" name="button_Register">
+        <property name="text">
+         <string>Not a user? Register</string>
+        </property>
+       </widget>
+      </item>
      </layout>
     </widget>
    </item>
