--- a/VideoPlayer/mainwindow.ui
+++ b/VideoPlayer/mainwindow.ui
@@ -29,6 +29,9 @@
       <widget class="QWidget" name="ProfilePage">
        <layout class="QVBoxLayout" name="verticalLayout_3"/>
       </widget>
+      <widget class="QWidget" name="RegisterPage">
+       <layout class="QVBoxLayout" name="verticalLayout_3"/>
+      </widget>
      </widget>
     </item>
    </layout>
