--- a/VideoPlayer/registerpage.ui
+++ b/VideoPlayer/registerpage.ui
@@ -117,8 +117,20 @@
         <property name="locale">
          <locale language="English" country="UnitedKingdom"/>
         </property>
+        <property name="wrapping">
+         <bool>false</bool>
+        </property>
+        <property name="frame">
+         <bool>true</bool>
+        </property>
+        <property name="buttonSymbols">
+         <enum>QAbstractSpinBox::NoButtons</enum>
+        </property>
         <property name="displayFormat">
          <string>d/M/yyyy</string>
+        </property>
+        <property name="calendarPopup">
+         <bool>false</bool>
         </property>
        </widget>
       </item>
