made the skeleton of a post class

--- a/VideoPlayer/homepage.ui
+++ b/VideoPlayer/homepage.ui
@@ -55,7 +55,7 @@ border: none;</string>
      <property name="widgetResizable">
       <bool>true</bool>
      </property>
-     <widget class="QWidget" name="scrollAreaWidgetContents_4">
+     <widget class="QWidget" name="scrollAreaForPosts">
       <property name="geometry">
        <rect>
         <x>0</x>
