--- a/VideoPlayer/homepage.ui
+++ b/VideoPlayer/homepage.ui
@@ -13,10 +13,17 @@
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout">
+  <layout class="QVBoxLayout" name="verticalLayout_2">
    <item>
     <widget class="QWidget" name="widget" native="true">
-     <layout class="QHBoxLayout" name="horizontalLayout">
+     <layout class="QVBoxLayout" name="verticalLayout">
+      <item>
+       <widget class="QLabel" name="label_Username">
+        <property name="text">
+         <string>[USERNAME]</string>
+        </property>
+       </widget>
+      </item>
       <item>
        <widget class="QPushButton" name="button_Profile">
         <property name="sizePolicy">
@@ -40,13 +47,6 @@ border: none;</string>
         </property>
        </widget>
       </item>
-      <item>
-       <widget class="QLabel" name="label_Username">
-        <property name="text">
-         <string>[USERNAME]</string>
-        </property>
-       </widget>
-      </item>
      </layout>
     </widget>
    </item>
@@ -55,15 +55,16 @@ border: none;</string>
      <property name="widgetResizable">
       <bool>true</bool>
      </property>
-     <widget class="QWidget" name="widget_2">
+     <widget class="QWidget" name="w_PostsWidget">
       <property name="geometry">
        <rect>
         <x>0</x>
         <y>0</y>
         <width>390</width>
-        <height>394</height>
+        <height>371</height>
        </rect>
       </property>
+      <layout class="QVBoxLayout" name="verticalLayout_3"/>
      </widget>
     </widget>
    </item>
