--- a/VideoPlayer/homepage.ui
+++ b/VideoPlayer/homepage.ui
@@ -16,14 +16,7 @@
   <layout class="QVBoxLayout" name="verticalLayout_2">
    <item>
     <widget class="QWidget" name="widget" native="true">
-     <layout class="QVBoxLayout" name="verticalLayout">
-      <item>
-       <widget class="QLabel" name="label_Username">
-        <property name="text">
-         <string>[USERNAME]</string>
-        </property>
-       </widget>
-      </item>
+     <layout class="QHBoxLayout" name="horizontalLayout">
       <item>
        <widget class="QPushButton" name="button_Profile">
         <property name="sizePolicy">
@@ -47,6 +40,13 @@ border: none;</string>
         </property>
        </widget>
       </item>
+      <item>
+       <widget class="QLabel" name="label_Username">
+        <property name="text">
+         <string>[USERNAME]</string>
+        </property>
+       </widget>
+      </item>
      </layout>
     </widget>
    </item>
@@ -61,7 +61,7 @@ border: none;</string>
         <x>0</x>
         <y>0</y>
         <width>390</width>
-        <height>371</height>
+        <height>394</height>
        </rect>
       </property>
       <layout class="QVBoxLayout" name="verticalLayout_3"/>
