--- a/VideoPlayer/profilepage.ui
+++ b/VideoPlayer/profilepage.ui
@@ -76,7 +76,10 @@
     </widget>
    </item>
    <item>
-    <widget class="QLabel" name="label_3">
+    <widget class="QLabel" name="label_Username">
+     <property name="styleSheet">
+      <string notr="true">font-size: 28px;</string>
+     </property>
      <property name="text">
       <string>[USERNAME]</string>
      </property>
@@ -86,9 +89,9 @@
     </widget>
    </item>
    <item>
-    <widget class="QLabel" name="label_2">
+    <widget class="QLabel" name="label_Email">
      <property name="styleSheet">
-      <string notr="true">font-size: 10px;</string>
+      <string notr="true">font-size: 18px;</string>
      </property>
      <property name="text">
       <string>[EMAIL]</string>
