--- a/VideoPlayer/VideoPlayer.qrc
+++ b/VideoPlayer/VideoPlayer.qrc
@@ -3,5 +3,11 @@
         <file>assets/VideoPlayer.qss</file>
         <file>assets/button_images/profile_image.jpeg</file>
         <file>assets/button_images/leftArrow.jpg</file>
+        <file>assets/translations/staysimple_en_GB.qm</file>
+        <file>assets/translations/staysimple_en_GB.ts</file>
+        <file>assets/translations/staysimple_en_US.qm</file>
+        <file>assets/translations/staysimple_en_US.ts</file>
+        <file>assets/translations/staysimple_tr.qm</file>
+        <file>assets/translations/staysimple_tr.ts</file>
     </qresource>
 </RCC>
