--- a/VideoPlayer/loginpage.ui
+++ b/VideoPlayer/loginpage.ui
@@ -44,6 +44,9 @@
        <height>16777215</height>
       </size>
      </property>
+     <property name="frame">
+      <bool>true</bool>
+     </property>
      <item>
       <property name="text">
        <string>English (GB)</string>
