--- a/VideoPlayer/loginpage.ui
+++ b/VideoPlayer/loginpage.ui
@@ -34,14 +34,20 @@
      </property>
      <property name="minimumSize">
       <size>
-       <width>90</width>
+       <width>120</width>
        <height>0</height>
       </size>
      </property>
      <property name="maximumSize">
       <size>
-       <width>72</width>
+       <width>160</width>
        <height>16777215</height>
+      </size>
+     </property>
+     <property name="sizeIncrement">
+      <size>
+       <width>10</width>
+       <height>0</height>
       </size>
      </property>
      <property name="frame">
