--- a/VideoPlayer/core/video/post.ui
+++ b/VideoPlayer/core/video/post.ui
@@ -56,7 +56,7 @@
    <item>
     <widget class="QVideoWidget" name="vp_MediaPlayer" native="true">
      <property name="sizePolicy">
-      <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+      <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
