--- a/VideoPlayer/VideoPlayer.qrc
+++ b/VideoPlayer/VideoPlayer.qrc
@@ -7,5 +7,7 @@
         <file>assets/button_images/likeButtonOn.jpg</file>
         <file>assets/button_images/commentsButton.jpg</file>
         <file>assets/button_images/new_user.jpg</file>
+        <file>assets/button_images/play_button.jpg</file>
+        <file>assets/button_images/pause_button.jpg</file>
     </qresource>
 </RCC>
