--- a/VideoPlayer/core/video/post.ui
+++ b/VideoPlayer/core/video/post.ui
@@ -74,6 +74,15 @@
           <verstretch>0</verstretch>
          </sizepolicy>
         </property>
+        <property name="maximumSize">
+         <size>
+          <width>24</width>
+          <height>24</height>
+         </size>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">border-image: url(:/assets/button_images/play_button.jpg);</string>
+        </property>
         <property name="text">
          <string/>
         </property>
