--- a/VideoPlayer/settingspage.ui
+++ b/VideoPlayer/settingspage.ui
@@ -116,6 +116,9 @@
           <height>0</height>
          </size>
         </property>
+        <property name="currentIndex">
+         <number>1</number>
+        </property>
         <item>
          <property name="text">
           <string>Small</string>
@@ -153,6 +156,9 @@
           <width>120</width>
           <height>0</height>
          </size>
+        </property>
+        <property name="currentIndex">
+         <number>1</number>
         </property>
         <item>
          <property name="text">
